@@ -736,6 +736,12 @@ function phpAds_upgradeHTMLCache ()
 		if ($current['storagetype'] == 'web')
 			$current['imageurl'] = $phpAds_config['type_web_url'].'/'.$current['filename'];
 		
+		
+		// Add slashes to status to prevent javascript errors
+		// NOTE: not needed in banner-edit because of magic_quotes_gpc
+		$current['status'] = addslashes($current['status']);
+		
+		
 		// Rebuild cache
 		$current['htmltemplate'] = stripslashes($current['htmltemplate']);
 		$current['htmlcache']    = addslashes(phpAds_getBannerCache($current));
