@@ -45,6 +45,10 @@ while ($current = phpAds_dbFetchArray($res))
 		$current['imageurl'] = $phpAds_config['type_web_url'].'/'.$current['filename'];
 	
 	
+	// Add slashes to status to prevent javascript errors
+	// NOTE: not needed in banner-edit because of magic_quotes_gpc
+	$current['status'] = addslashes($current['status']);
+	
 	
 	// Rebuild cache
 	$current['htmltemplate'] = stripslashes($current['htmltemplate']);
